<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/hotels_btn1"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/hotels_btn2"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title2"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/title3"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>