<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_error_msg"
        android:visibility="gone"
        android:textSize="32dp"
        android:text="@string/welcome_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/welcome_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.60"
            android:layout_marginBottom="15sp"
            >

            <TextView
                android:id="@+id/welcome_txtWollyBubble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico400regular"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/app_name"
                android:textSize="60sp" />

        <TextView
            android:id="@+id/welcome_txtWollyBubbleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Your favorite Booking app"
            />

            <ImageView
                android:id="@+id/welcome_icon"
                android:layout_width="300dp"
                android:layout_height="283dp"
                android:layout_gravity="center"
                android:contentDescription="@string/welcome_icon_description"
                android:src="@drawable/ic_hotel_solid">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@color/light_green"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_txtWelcome"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="Welcome to Woolly Bubble!"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/welcome_txtWelcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Por favor, faça login" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

<!--            <Button-->
<!--                android:id="@+id/google_sign_in_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Google" />-->

            <Button
                android:id="@+id/welcome_nextScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Continuar sem login"/>

<!--            <Button-->
<!--                android:id="@+id/welcome_btnFacebook"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Facebook" />-->

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>